# URL-Shortener

./: .env.example  Cargo.toml  README.md
.sqlx/: query-0d5c904f6cba933517c64c5749dbc7110305934e13eb2345f551124666c3bc58.json  query-12c05639fc71df45d8da50d5e388ad3225df273804d494bdb30e5cacc32163b1.json  query-5fa69dcdbaa47c82c017ffc6c84f094b30926e348aba6fca8fd0a7d5e7c3d6bd.json  query-992d0a59894bd1169559e19ca6425585b8fb11dba1519c3f6440951eb55a58a9.json  query-d11dcb92334742d6eabc5c10202cb4c968d249159edce6e83c793bdaf0532472.json  query-dcbb4ea35184c59729cc74d118a0b4a31fe375abdbdcfa5a898c0d58c8cfa432.json  query-fe1f2a5593323ba027143b5d7807ff0a5e50029221e826f8d75df2dd70bd0a4e.json
migrations/: 20250324133300_create_shortened_urls_table.down.sql  20250324133300_create_shortened_urls_table.up.sql
src/: app.rs  config.rs  db.rs  error.rs  errors.rs  main.rs  telemetry.rs  types.rs
src/errors/: config.rs  mod.rs  repository.rs
src/handlers/: mod.rs  shortened_url.rs
src/middleware/: mod.rs  request_logger.rs
src/models/: mod.rs  shortened_url.rs
src/repositories/: mod.rs  shortened_url.rs
src/routes/: mod.rs  shortened_url.rs
src/services/: mod.rs  shortened_url.rs  url_generator.rs
src/utils/: hash.rs  id_generator.rs  mod.rs
src/validations/: mod.rs  shortened_url.rs
