[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A URL shortener service built with Rust"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.7.1"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "chrono", "uuid", "migrate"] }
redis = { version = "0.29.2", features = ["tokio-comp", "connection-manager"] }

# Environment configu0.29.2
dotenvy = "0.15.7"
config = "0.15.11"

# Logging
env_logger = "0.11.7"
log = "0.4"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# URL handling and hashing
url = "2.4.0"
base64 = "0.22.1"
sha2 = "0.10.7"
nanoid = "0.4.0"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.4"

# Time
chrono = { version = "0.4.26", features = ["serde"] }

# Utilities
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
mockall = "0.13.1"
criterion = "0.5.1"
fake = { version = "4.2.0", features = ["chrono", "http"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
debug = false